--- a/src/assets/styles/getOrderInfo.css
+++ b/src/assets/styles/getOrderInfo.css
@@ -242,8 +242,6 @@
 
     border:1px solid rgb(213, 28, 41);
 
-    color:#FFF;
-
     font-size:14px;
 
     position: relative;
@@ -252,6 +250,11 @@
 
     top:0px;
 
+}
+.order .main .order-product .shoppingCart a{
+
+    color:#FFF;
+    
 }
 .order .main .order-product .product-title{
 
@@ -832,7 +835,7 @@
 
     top:20px;
 
-    left:57px;
+    left:84px;
 
     font-size: 15px;
 
@@ -851,7 +854,7 @@
 
     top:18px;
 
-    left:53px;
+    left:87px;
 }
 #div2 .top .top-right{
 
@@ -873,7 +876,7 @@
 
     font-size: 15px;
 
-    left:-11px;
+    left:17px;
 }
 #div2 .top .top-right .number{
 
@@ -889,7 +892,7 @@
 
     top:18px;
 
-    left:-13px;
+    left:20px;
 
 }
 #div2 .middle{
@@ -933,7 +936,7 @@
 
     position: relative;
 
-    left:6px;
+    left:35px;
 
     font-size: 15px;
 }
@@ -949,7 +952,7 @@
 
     border:1px solid #eeeeee;
 
-    left:-99px;
+    left:-66px;
 
 
 }
@@ -972,7 +975,7 @@
 
     position: relative;
 
-    left:72px;
+    left:100px;
 }
 #div2 .bottom .detail{
 
@@ -988,7 +991,7 @@
 
     position: relative;
 
-    left:70px;
+    left:105px;
 
 }
 #div2 .button-two{
