--- a/src/assets/styles/shoppingcart.css
+++ b/src/assets/styles/shoppingcart.css
@@ -28,6 +28,10 @@
     font-size: 10px;
     line-height: 17px;
 }
+.mz-checkbox.checked {
+    border-color: #00c3f5;
+    background-color: #00c3f5;
+}
 .cart .cart-select-all {
     display: inline-block;
     vertical-align: middle;
@@ -146,8 +150,86 @@
     color: #595959;
     border: 1px solid #dedede;
 }
+.cart-product .cart-product-price a {
+    color: #000;
+}
 .cart-product .cart-product-price.total {
     color: #E02B41;
     font-size: 16px;
     opacity: 1;
+}
+.cart-footer {
+    position: relative;
+    width: 100%;
+    height: 70px;
+    font-size: 14px;
+    color: #666;
+    line-height: 67px;
+    transition: background-color 1s;
+}
+.cart-footer .mzcontainer {
+    background-color: #fff;
+    height: 100%;
+}
+.cart-footer .cart-footer-left {
+    float: left;
+    margin-left: 24px;
+    height: 100%;
+}
+.cart .cart-select-all {
+    display: inline-block;
+    vertical-align: middle;
+    color: #333;
+    cursor: pointer;
+    font-size: 14px;
+    line-height: 0;
+}
+.cart-footer .cart-footer-count, .cart-footer .cart-remove-selected {
+    color: #8C8C8C;
+    vertical-align: middle;
+}
+.cart-footer .cart-remove-selected {
+    margin: 0 24px 0 12px;
+    cursor: pointer;
+}
+.cart-footer .cart-footer-num {
+    margin: 0 5px;
+    opacity: 1;
+}
+.cart-footer .cart-footer-num.blue {
+    color: #00c3f5;
+}
+.cart-footer .cart-footer-right {
+    float: right;
+    height: 100%;
+    margin-right: 30px;
+}
+.cart-footer .cart-footer-sum {
+    color: #595959;
+    vertical-align: middle;
+}
+.cart-footer .cart-footer-num.red {
+    color: #E02B41;
+}
+.cart-footer .cart-footer-total {
+    font-size: 20px;
+    font-weight: bolder;
+    color: #E02B41;
+    margin-right: 24px;
+    vertical-align: middle;
+}
+.mz-btn {
+    width: 80px;
+    height: 34px;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+    line-height: 34px;
+}
+.mz-btn.success {
+    color: #FFF;
+    border-color: #00c3f5;
+    background-color: #00c3f5;
 }
