--- a/src/assets/styles/getOrderInfo.css
+++ b/src/assets/styles/getOrderInfo.css
@@ -143,6 +143,8 @@
     height: 20px;
 
     color:rgb(213, 28, 41);
+
+    display:none;
 }
 .order .main .order-address .order-address-list .order-address-check .order-address-check-ctrl{
 
@@ -914,19 +916,19 @@
 }
 #div2 .middle ul li{
 
-    float:left;
+    float: left;
 
-    width:17%;
+    width: 22%;
 
-    height:100%;
+    height: 100%;
 
-    padding: 0  10px;
+    padding: 0 9px;
 
     line-height: 80px;
 
     position: relative;
 
-    left:40px;
+    left: 37px;
   
 }
 #div2 .middle ul li span{
@@ -937,20 +939,25 @@
 
     font-size: 15px;
 }
-#div2 .middle ul li #sel{
+#div2 .middle ul li .sel{
 
     outline: none;
 
-    width:170px;
+    width: 234px;
 
-    height:40px;
+    height: 40px;
 
     position: relative;
 
-    border:1px solid #eeeeee;
+    border: 1px solid #eeeeee;
 
-    left:-66px;
+    left: -107px;
 
+    margin-left: 13px;
+
+    font-size: 15px;
+
+    color:#aaa;
 
 }
 #div2 .bottom{
