--- a/src/assets/styles/getOrderInfo.css
+++ b/src/assets/styles/getOrderInfo.css
@@ -655,7 +655,7 @@
    color:green;
 
 }
-.order .main .order-tatal .order-tatal-pay .order-tatal-pay-content .order-tatal-pay-row .list .lable .iconfont.icon-iconzhi01{
+.order .main .order-tatal .order-tatal-pay .order-tatal-pay-content .order-tatal-pay-row .list .lable .iconfont.icon-alipay{
 
     font-size:35px;
     
