--- a/src/assets/styles/category.css
+++ b/src/assets/styles/category.css
@@ -1,24 +1,31 @@
 .content {
   margin: 0 auto;
+  background: #f5f5f5;
 }
 .content .content-container {
   position: relative;
-  background: #fff;
+  width: 1240px;
+  margin: 0 auto;
+  height: auto;
+  overflow: hidden;
 }
 .content .content-container .goods-block {
   position: relative;
   background: #f5f5f5;
+  height: auto;
+  overflow: hidden;
 }
 .content .content-container .goods-block .goods-container {
   width: 1240px;
   margin: 0 auto;
+  height: auto;
+  overflow: hidden;
 }
 .content .content-container .goods-block .goods-container .goods-category {
   margin-top: 10px;
   top: 15px;
   position: relative;
   line-height: 45px;
-  margin-bottom: 48px;
   background: #FFFFFF;
 }
 .content .content-container .goods-block .goods-container .goods-category .goods-name {
@@ -115,17 +122,21 @@
 .content .content-container .goods-block .goods-container .goods-group {
   position: relative;
   margin: 0 auto;
+  height: auto;
+  overflow: hidden;
 }
 .content .content-container .goods-block .goods-container .goods-group .detail-recommend {
   background: #f4f4f4;
-}
-.content .content-container .goods-block .goods-container .goods-group .detail-recommend-slider {
-  height: 338px;
-  padding-bottom: 60px;
+  height: auto;
+  overflow: hidden;
+  width: 104%;
 }
 .content .content-container .goods-block .goods-container .goods-group .detail-recommend-slider-wrap {
-  margin-right: -100px;
-  width: 100%;
+  height: auto;
+  overflow: hidden;
+  margin-bottom: 18px;
+  padding-bottom: 20px;
+  width: 104%;
 }
 .content .content-container .goods-block .goods-container .goods-group .detail-rs-item {
   position: relative;
@@ -133,6 +144,7 @@
   height: 338px;
   width: 280px;
   margin-right: 40px;
+  margin-top: 25px;
   background: #fff;
   display: block;
 }
@@ -144,14 +156,28 @@
   padding: 30px 10px 5px;
   text-align: center;
 }
-.content .content-container .goods-block .goods-container .goods-group .detail-rs-item-wrap1 {
-  display: block;
-  padding: 30px 10px 5px;
-  text-align: center;
-}
 .content .content-container .goods-block .goods-container .goods-group .detail-rs-item-wrap .mod-desc {
   display: block;
   margin-top: 26px;
+}
+.content .content-container .goods-block .goods-container .goods-group .detail-rs-item-wrap .mod-desc .item-hot-sale {
+  position: absolute;
+  top: 6px;
+  left: 5px;
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  color: #fff;
+  font-size: 16px;
+  border-radius: 50%;
+}
+.content .content-container .goods-block .goods-container .goods-group .detail-rs-item-wrap .mod-desc .item-hot-sale.red {
+  background-color: #ff3149;
+  background-image: linear-gradient(120deg, #ff3149, #ff64a6);
+}
+.content .content-container .goods-block .goods-container .goods-group .detail-rs-item-wrap .mod-desc .item-hot-sale.yellow {
+  background-color: #ff910e;
+  background-image: linear-gradient(120deg, #ff910e, #ffd037);
 }
 .content .content-container .goods-block .goods-container .goods-group .detail-rs-item-wrap .mod-desc .vm-title {
   font-size: 14px;
