debug change color

--- a/src/assets/styles/getOrderInfo.css
+++ b/src/assets/styles/getOrderInfo.css
@@ -98,9 +98,9 @@
 .order .main .order-address .order-address-list .order-address-check.checked,.order .main .order-address .order-address-list .order-address-check:hover{
 
 
-    border: 1px solid rgb(213, 28, 41);
+    border: 1px solid #E02B41;
 
-    color:rgb(213, 28, 41);
+    color:#E02B41;
 
 }
 .order .main .order-address .order-address-list .order-address-check .order-address-check-top{
@@ -169,7 +169,7 @@
 
     height: 20px;
 
-    color:rgb(213, 28, 41);
+    color:#E02B41;
 
     display:none;
 }
@@ -191,7 +191,7 @@
 
     padding-top: 5px;
 
-    color: rgb(213, 28, 41)
+    color:#E02B41
 
 }
 .order .main .order-address .order-address-list .order-address-check .order-address-check-ctrl .delete{
@@ -265,9 +265,9 @@
 
     height:40px;
 
-    background-color: rgb(213, 28, 41);
+    background-color: #E02B41;
 
-    border:1px solid rgb(213, 28, 41);
+    border:1px solid #E02B41;
 
     font-size:14px;
 
@@ -473,7 +473,7 @@
 
     width: 160px;
 
-    color:rgb(213, 28, 41);
+    color:#E02B41;
 
     line-height: 150px;
 
@@ -497,7 +497,7 @@
 
     border-left: 1px solid #EFEFEF;
 
-    color: rgb(213, 28, 41);
+    color: #E02B41;
     
     display: table-cell;
 
@@ -555,7 +555,7 @@
 }
 .order .main .order-product .product-list .table .tfoot .order-product-footer .product-total .price{
 
-    color:rgb(213, 28, 41);
+    color:#E02B41;
 
     font-size: 20px
 
@@ -723,7 +723,7 @@
 }
 .order .main .order-tatal .order-tatal-content .order-tatal-row .order-tatal-price.total{
 
-    color: rgb(213, 28, 41);
+    color: #E02B41;
 
     font-size: 20px;
     
@@ -748,9 +748,9 @@
 
     height:40px;
 
-    background-color: rgb(213, 28, 41);
+    background-color: #E02B41;
 
-    border:1px solid rgb(213, 28, 41);
+    border:1px solid #E02B41;
 
     color:#FFF;
 
