--- a/src/assets/styles/shoppingcart.css
+++ b/src/assets/styles/shoppingcart.css
@@ -1,10 +1,56 @@
 .cart {
     padding-bottom: 40px;
     background-color: #F4F6FA;
+    padding-top: 10px;
+}
+.cart .cart-empty {
+    display: table;
+    height: 360px;
+    /* margin: 10px 0 30px; */
+    background-color: #fff;
+}
+.cart .cart-empty .cart-empty-content {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+}
+.cart .cart-empty .cart-empty-left {
+    width: 100px;
+    height: 114px;
+    display: inline-block;
+    vertical-align: middle;
+    background: url(../images/cart.png)
+}
+.cart .cart-empty .cart-empty-right {
+    display: inline-block;
+    vertical-align: middle;
+    text-align: left;
+    color: #666;
+    margin-left: 20px;
+}
+.cart .cart-empty .cart-empty-title {
+    font-size: 18px;
+    font-weight: bolder;
+    margin-bottom: 15px;
+}
+.cart .cart-empty .primary {
+    color: #fff;
+    border-color: #E02B41;
+    background-color: #E02B41;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 4px;
+    outline: 0;
+    cursor: pointer;
+    font-size: 14px;
+    width: 58px;
+    height: 34px;
+    line-height: 34px;
+    padding: 10px 20px;
 }
 .cart .cart-header {
     height: 50px;
-    margin-top: 10px;
+    line-height: 50px;
     font-size: 12px;
     background-color: #fff;
     color: rgba(51,51,51,.4);
@@ -16,30 +62,22 @@
     padding-left: 24px;
 }
 .cart .mz-checkbox {
-    margin-right: 5px;
     display: inline-block;
     vertical-align: middle;
     width: 18px;
     height: 18px;
-    border: 1px solid #BDBDBD;
-    border-radius: 2px;
-    background-color: #fff;
-    text-align: center;
-    font-size: 10px;
-    line-height: 17px;
 }
-.mz-checkbox.checked {
-    border-color: #00c3f5;
-    background-color: #00c3f5;
+.cart-select-all .mz-checkbox {
+    margin-right: 5px;
 }
-.cart .cart-select-all {
-    display: inline-block;
+.cart .cart-col-select .selectAll {
     vertical-align: middle;
     color: #333;
     cursor: pointer;
     font-size: 14px;
     line-height: 0;
 }
+/* 头部表头 */
 .cart .cart-col-price {
     width: 220px;
     text-align: center;
@@ -55,7 +93,7 @@
 .cart .cart-col-ctrl {
     width: 110px;
     text-align: right;
-    color: #00c3f5;
+    color:#E02B41;
     padding-right: 48px;
     cursor: pointer;
 }
@@ -66,61 +104,53 @@
     background-color: #fff;
     margin-bottom: 10px;
 }
-.cart-merchant .cart-merchant-body {
-    border-bottom: 1px solid #EFEFEF;
-}
-.cart-product {
+.cart-merchant .mainCommodity {
     height: 150px;
+    border-bottom: 1px solid #EFEFEF;
     border-top: 1px solid #EFEFEF;
 }
-.cart .cart-col-select {
-    width: 550px;
-    text-align: left;
+.commodityInfo ul {
+    height: 150px;
     padding-left: 24px;
+    display: table-cell;
+    vertical-align: middle;
 }
-.cart-product .cart-col-select .cart-product-link {
-    margin-left: 19px;
+.commodityInfo ul li {
+    height: 150px;
+    float: left;
+    line-height: 150px;
+}
+.cart .td-chk {
+    width: 60px;
+}
+.cart .td-item {
+    width: 525px;
+    /* padding-left: 24px; */
+}
+.cart .cart-product-img {
     display: inline-block;
     vertical-align: middle;
-    color: #262626;
 }
-.cart-product .cart-product-info {
-    width: 330px;
-}
-.cart-product .cart-product-info p {
-    font-size: 14px;
-    width: 100%;
-    color: #000;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-.cart-product .cart-product-info .cart-product-desc, .cart-product .cart-product-info .cart-product-package-name {
-    color: #8C8C8C;
-    margin-top: 4px;
-}
-.cart-product .cart-product-info .cart-product-item-name {
+.cart .td-item .td-info-msg{
+    display: inline-block;
     font-size: 16px;
     color: #262626;
 }
-.cart .cart-col-price {
-    width: 220px;
-    text-align: center;
+.cart .td-price {
+    width: 175px;
+    color: #666;
 }
-.cart .cart-col-number {
+.cart .td-amount {
     width: 200px;
-    text-align: center;
 }
-.cart-col-number .mod-control {
+.td-amount .item-amount {
     position: relative;
     height: 40px;
     width: 122px;
     overflow: hidden;
-    float: left;
-    margin-left: 30px;
-    margin-bottom: -15px;
+    margin-top: 55px;
 }
-.cart-col-number .mod-control a {
+.td-amount .item-amount a {
     position: absolute;
     top: 0;
     right: 0;
@@ -134,10 +164,10 @@
     color: #000;
     background: #f7f7f7;
 }
-.cart-col-number .mod-control .vm-minus {
+.td-amount .item-amount .amount-left {
     right: 90px;
 }
-.cart-col-number .mod-control input {
+.td-amount .item-amount input {
     position: absolute;
     top: 0;
     right: 30px;
@@ -150,86 +180,99 @@
     color: #595959;
     border: 1px solid #dedede;
 }
-.cart-product .cart-product-price a {
-    color: #000;
-}
-.cart-product .cart-product-price.total {
+.cart .td-sum {
+    width: 180px;
     color: #E02B41;
-    font-size: 16px;
-    opacity: 1;
 }
-.cart-footer {
-    position: relative;
+.cart .delete,.cart .deleteSelected {
+    color: #666;
+    font-size: 12px;
+}
+.footer {
     width: 100%;
     height: 70px;
     font-size: 14px;
     color: #666;
     line-height: 67px;
-    transition: background-color 1s;
-}
-.cart-footer .mzcontainer {
     background-color: #fff;
-    height: 100%;
 }
-.cart-footer .cart-footer-left {
+.footer .footer-left {
     float: left;
     margin-left: 24px;
     height: 100%;
 }
-.cart .cart-select-all {
-    display: inline-block;
-    vertical-align: middle;
+.cart .footer-left .selectAll{
     color: #333;
     cursor: pointer;
     font-size: 14px;
-    line-height: 0;
+    margin-right: 20px;
 }
-.cart-footer .cart-footer-count, .cart-footer .cart-remove-selected {
+.footer .footer-left {
     color: #8C8C8C;
     vertical-align: middle;
 }
-.cart-footer .cart-remove-selected {
+.footer .footer-left .operation {
     margin: 0 24px 0 12px;
     cursor: pointer;
 }
-.cart-footer .cart-footer-num {
+.footer .footer-left .amount-sum {
     margin: 0 5px;
-    opacity: 1;
 }
-.cart-footer .cart-footer-num.blue {
-    color: #00c3f5;
+.footer .amount-sum .totalSum {
+    color: #E02B41;;
 }
-.cart-footer .cart-footer-right {
+.footer .footer-right {
     float: right;
     height: 100%;
     margin-right: 30px;
 }
-.cart-footer .cart-footer-sum {
-    color: #595959;
-    vertical-align: middle;
-}
-.cart-footer .cart-footer-num.red {
-    color: #E02B41;
-}
-.cart-footer .cart-footer-total {
+.footer .cart-footer-total {
     font-size: 20px;
     font-weight: bolder;
     color: #E02B41;
     margin-right: 24px;
     vertical-align: middle;
 }
-.mz-btn {
+.footer .footer-right{
+    height: 100%;
+    margin-right: 30px;
+}
+.footer .footer-right .price-sum{
+    color: #595959;
+    position: relative;
+}
+
+.footer .footer-right .total-sum,.footer .footer-right .moneySym{
+    font-size: 20px;
+    font-weight: bolder;
+    color: #E02B41;
+    vertical-align: middle;
+}
+.footer .footer-right .btn-area {
     width: 80px;
     height: 34px;
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 4px;
-    cursor: pointer;
     font-size: 14px;
     line-height: 34px;
+    text-align: center;
+    margin-top: 15px;
+    margin-left: 15px;
+    cursor: not-allowed;
+    background-color: #DBDBDB;
+    border-radius: 2px;
 }
-.mz-btn.success {
-    color: #FFF;
-    border-color: #00c3f5;
-    background-color: #00c3f5;
+.footer .footer-right .free,.footer .footer-right .charge{
+    display: block;
+    font-size: 10px;
+    color: #8C8C8C;
+    position: absolute;
+    top: 28px;
+    left: -33px;
+}
+.footer .footer-right .free{
+    left: 30px;
+    display: none;
+
+}
+.footer .footer-right  .carriage-red{
+    color: #E02B41;
 }
