--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -1,3 +1,13 @@
+.center {
+  width: 1240px;
+  margin: 0 auto;
+}
+.fl {
+  float: left;
+}
+.fr {
+  float: right;
+}
 .common-header {
   width: 100%;
 }
