--- a/src/assets/styles/reset.css
+++ b/src/assets/styles/reset.css
@@ -1,54 +1,26 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, font, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td {
-margin: 0;
-padding: 0;
-border: 0;
-outline: 0;
-font-size: 100%;
-vertical-align: baseline;
-background: transparent;
+@charset "UTF-8";
+body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, legend, input, textarea, button, p, blockquote, th, td {
+  margin: 0;
+  padding: 0;
 }
+
 body {
-line-height: 1;
+  padding: 0;
+  margin: 0;
+  /*text-align: center;*/
+  color: #333;
+  font-size: 14px;
 }
-ol, ul {
-list-style: none;
+
+li {
+  list-style-type: none;
 }
-blockquote, q {
-quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-content: ”;
-content: none;
-}
-/* remember to define focus styles! */
-:focus {
-outline: 0;
-}
-/* remember to highlight inserts somehow! */
-ins {
-text-decoration: none;
-}
-del {
-text-decoration: line-through;
-}
-/* tables still need ‘cellspacing=”0″‘ in the markup */
-table {
-border-collapse: collapse;
-border-spacing: 0;
-}
+
 a {
-    text-decoration: none;
-    font-style: normal;
+  text-decoration: none;
 }
-em {
-    font-style: normal;
+
+img, input, button {
+  border: none;
+  vertical-align: middle;
 }
