--- a/src/assets/styles/details.css
+++ b/src/assets/styles/details.css
@@ -1,26 +1,31 @@
 .main {
     height: 710px;
 }
+
 .container {
     width: 1240px;
     height: 100%;
     /* background-color: pink; */
 }
+
 .container .preview {
     width: 560px;
     margin-right: 40px;
 }
-.property {
+
+.main .container .property {
     position: relative;
     width: 640px;
     font-size: 12px;
     padding-top: 25px;
 }
-.preview-booth{
+
+.main .container .preview-booth {
     margin: 8px 0;
     width: 560px;
-    height: 560px;  
+    height: 560px;
 }
+
 .preview .preview-thumb li {
     position: relative;
     display: inline-block;
@@ -28,20 +33,24 @@
     overflow: hidden;
     height: 102px;
 }
+
 .preview .preview-thumb a {
     display: block;
     position: relative;
     overflow: hidden;
     text-align: center;
 }
+
 .preview .preview-thumb img {
     position: relative;
     max-width: 80px;
     max-height: 80px;
 }
+
 .preview .preview-action {
     padding: 10px 56px 0;
 }
+
 .preview .preview-action a {
     font-size: 12px;
     display: inline-block;
@@ -49,32 +58,38 @@
     color: #bfbfbf;
     line-height: 1;
 }
-.property-hd{
+
+.property-hd {
     position: relative;
     padding-top: 30px;
     margin-bottom: 12px;
 }
-.property-hd h1{
+
+.property-hd h1 {
     margin-bottom: 4px;
     font-size: 28px;
     line-height: 1.2;
     font-weight: 700;
     color: #262626;
 }
-.property-hd .mod-info{
+
+.property-hd .mod-info {
     color: #e22841;
     font-size: 14px;
 }
+
 .property-sell {
     position: relative;
     background: #f4f6fa;
     padding: 16px 0 12px;
 }
+
 .property-sell-price {
     height: 36px;
     overflow: hidden;
     padding-left: 10px;
 }
+
 .property-sell-price .mod-original {
     text-decoration: line-through;
     color: #999;
@@ -82,28 +97,33 @@
     margin-top: 15px;
     margin-right: 10px;
 }
+
 .property-sell-price .mod-price small {
     font-size: 24px;
     font-family: arial;
     font-style: normal;
     color: #e22841;
 }
+
 .property-sell-price .mod-price {
     margin-right: 8px;
     line-height: 36px;
 }
+
 .property-sell-price .mod-price .vm-money {
     color: #e02b41;
     font-size: 36px;
     font-weight: 500;
     line-height: 36px;
 }
+
 .property-sell dl {
     margin-left: 10px;
     margin-top: 12px;
     line-height: 22px;
     font-size: 14px;
 }
+
 .property-sell .vm-entry {
     float: left;
     padding-left: 0;
@@ -112,6 +132,7 @@
     font-size: 12px;
     color: #8c8c8c;
 }
+
 .property-sell .vm-entry span {
     border-radius: 2px;
     color: #e02b41;
@@ -123,19 +144,18 @@
     padding: 4px 0;
     background: #F2EAEF;
 }
+
 .property-sell dd {
     display: -ms-flexbox;
     display: flex;
     color: #595959;
 }
-.property-sell .vm-more {
-    color: #27b3ff;
-    margin-left: 10px;
-}
+
 .property-sibling-item {
     margin-top: 20px;
     margin-bottom: -10px;
 }
+
 .property .vm-metatit {
     float: left;
     width: 65px;
@@ -144,12 +164,15 @@
     line-height: 42px;
     color: #8c8c8c;
 }
-.property-sibling-item dd,.property-buy dd {
+
+.property-sibling-item dd,
+.property-buy dd {
     float: left;
     width: 565px;
     overflow: hidden;
     padding-left: 10px;
 }
+
 .property-sibling-item a {
     position: relative;
     float: left;
@@ -165,9 +188,11 @@
     text-decoration: none;
     font-size: 14px;
 }
+
 .property-buy-quantity {
     margin-bottom: 45px;
 }
+
 .property-buy .mod-control {
     position: relative;
     height: 40px;
@@ -177,6 +202,7 @@
     float: left;
     margin-bottom: 45px;
 }
+
 .property-buy .mod-control a {
     position: absolute;
     top: 0;
@@ -191,9 +217,11 @@
     color: #000;
     background: #f7f7f7;
 }
+
 .property-buy .mod-control .vm-minus {
     right: 90px;
 }
+
 .property-buy .mod-control input {
     position: absolute;
     top: 0;
@@ -207,61 +235,73 @@
     color: #595959;
     border: 1px solid #dedede;
 }
+
 .property-buy .property-buy-action {
     margin-top: 17px;
     margin-left: 10px;
 }
-.btn-primary,.btn-empty {
+
+.btn-primary,
+.btn-empty {
     color: #fff;
-    background-color: #27b3ff;
+    background-color: #E02B41;
     padding: 15px 0;
     width: 208px;
     font-size: 20px;
     line-height: 24px;
-    margin-right: 20px!important;
+    margin-right: 20px;
     border-radius: 3px;
     text-align: center;
     display: inline-block;
 }
+
 .btn-empty {
-    color: #27b3ff;
-    border: 1px solid #27B3FF;
+    color: #E02B41;
+    border: 1px solid #E02B41;
     background-color: #fff;
 }
+
 .simple {
     background: #f4f4f4;
     padding-bottom: 60px;
     margin-top: 60px;
 }
+
 .simple-hd {
     font-size: 24px;
     padding-top: 45px;
     padding-bottom: 20px;
 }
+
 /* 推荐商品 */
 .detail-recommend {
     background: #f4f4f4;
     overflow: hidden;
 }
+
 .detail-recommend-hd {
     overflow: hidden;
     margin-bottom: 14px;
 }
+
 .detail-recommend-hd .mod-title {
     font-size: 24px;
     color: #333;
     font-weight: 400;
     float: left;
 }
+
 .detail-recommend-slider {
     overflow: hidden;
     height: 338px;
     margin-bottom: 60px;
 }
+
 .detail-recommend-slider-wrap {
     margin-right: -100px;
     width: 100%;
 }
+
 .detail-rs-item {
     position: relative;
     float: left;
@@ -271,18 +311,22 @@
     background: #fff;
     display: block;
 }
+
 .detail-rs-item-wrap {
     display: block;
     padding: 30px 10px 5px;
     text-align: center;
 }
+
 .detail-rs-item-wrap .mod-desc {
     margin-top: 26px;
 }
+
 .detail-rs-item-wrap .mod-desc .vm-title {
     font-size: 14px;
     color: #333;
 }
+
 .detail-rs-item-wrap .mod-desc .vm-subtitle {
     font-size: 12px;
     color: #999;
@@ -290,11 +334,13 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+
 .detail-rs-item-wrap .mod-desc .vm-price {
     margin-top: 8px;
     font-size: 12px;
     color: #e02b41;
 }
+
 .detail-rs-item-wrap .mod-desc .vm-price-text {
     color: #e02b41;
     padding-right: 2px;
