--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,199 +1,244 @@
 .content {
-  margin: 0 auto;
+    margin: 0 auto;
 }
+
 .content .content-container {
-  position: relative;
-  background: #fff;
+    position: relative;
+    background: #fff;
 }
+
 .content .content-container .banner {
-  margin: 0 auto;
-  width: 1240px;
-  height: 460px;
-  text-align: center;
+    margin: 0 auto;
+    width: 1240px;
+    height: 460px;
+    text-align: center;
 }
+
 .content .content-container .banner .banner-slide li {
-  position: absolute;
-  width: 1240px;
-  height: 460px;
+    position: absolute;
+    width: 1240px;
+    height: 460px;
 }
+
 .content .content-container .banner .banner-slide li img {
-  width: 1240px;
-  height: 460px;
+    width: 1240px;
+    height: 460px;
 }
+
 .content .content-container .banner .swiper-arrow {
-  display: none;
-  width: 100%;
-  position: relative;
-  top: 50%;
-  z-index: 1;
-  left: auto;
-  margin-left: auto;
-  margin-top: auto;
+    display: none;
+    width: 100%;
+    position: relative;
+    top: 50%;
+    z-index: 1;
+    left: auto;
+    margin-left: auto;
+    margin-top: auto;
 }
+
 .content .content-container .banner .swiper-arrow .slide-left {
-  color: #fff;
-  font-size: 35px;
-  position: absolute;
-  background: rgba(0, 0, 0, 0.2);
-  width: 45px;
-  height: 80px;
-  left: 0;
-  margin-top: -56px;
-  line-height: 80px;
+    color: #fff;
+    font-size: 35px;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.2);
+    width: 45px;
+    height: 80px;
+    left: 0;
+    margin-top: -56px;
+    line-height: 80px;
 }
+
 .content .content-container .banner .swiper-arrow .slide-right {
-  color: #fff;
-  font-size: 35px;
-  position: absolute;
-  background: rgba(0, 0, 0, 0.2);
-  width: 45px;
-  height: 80px;
-  right: 0;
-  margin-top: -56px;
-  line-height: 80px;
+    color: #fff;
+    font-size: 35px;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.2);
+    width: 45px;
+    height: 80px;
+    right: 0;
+    margin-top: -56px;
+    line-height: 80px;
 }
+
 .content .content-container .banner .focuses {
-  z-index: 1;
-  position: relative;
-  top: 90%;
+    z-index: 1;
+    position: relative;
+    top: 90%;
 }
+
 .content .content-container .banner .focuses li {
-  display: inline-block;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  border: 2px solid rgba(51, 51, 51, 0.5);
-  text-align: center;
-  cursor: pointer;
-  position: static;
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    border: 2px solid rgba(51, 51, 51, 0.5);
+    text-align: center;
+    cursor: pointer;
+    position: static;
 }
+
 .content .content-container .banner .focuses .current {
-  background: #fff;
-  transition: .4s all;
+    background: #fff;
+    transition: .4s all;
 }
+
 .content .content-container .banner:hover .swiper-arrow {
-  display: block;
+    display: block;
 }
+
 .content .content-container .goods-block {
-  position: relative;
-  background: #f5f5f5;
-  margin-top: 30px;
+    position: relative;
+    background: #f5f5f5;
+    margin-top: 30px;
 }
+
 .content .content-container .goods-block .goods-container {
-  width: 1240px;
-  margin: 0 auto;
+    width: 1240px;
+    margin: 0 auto;
 }
+
 .content .content-container .goods-block .goods-container .goods-group {
-  position: relative;
-  margin: 0 auto;
+    position: relative;
+    margin: 0 auto;
 }
-.content .content-container .goods-block .goods-container .goods-group a > img {
-  width: 1240px;
+
+.content .content-container .goods-block .goods-container .goods-group a>img {
+    width: 1240px;
 }
+
 .content .content-container .goods-block .goods-container .goods-group .goods-name {
-  margin-top: 20px;
+    margin-top: 20px;
 }
+
 .content .content-container .goods-block .goods-container .goods-group .goods-name .goods-title {
-  font-weight: 400;
-  font-size: 20px;
-  color: #757575;
+    font-weight: 400;
+    font-size: 20px;
+    color: #757575;
 }
+
 .content .content-container .goods-block .goods-container .goods-group .detail-recommend {
-  background: #f4f4f4;
-  height: auto;
-  overflow: hidden;
-  width: 104%;
+    background: #f4f4f4;
+    height: auto;
+    overflow: hidden;
+    width: 104%;
 }
+
 .content .content-container .goods-block .goods-container .goods-group .detail-recommend-slider-wrap {
-  height: auto;
-  overflow: hidden;
-  margin-bottom: 18px;
-  padding-bottom: 20px;
-  width: 104%;
+    height: auto;
+    overflow: hidden;
+    margin-bottom: 18px;
+    padding-bottom: 20px;
+    width: 104%;
 }
+
 .content .content-container .goods-block .goods-container .goods-group .detail-rs-item {
-  position: relative;
-  float: left;
-  height: 338px;
-  width: 280px;
-  margin-right: 40px;
-  margin-top: 25px;
-  background: #fff;
-  display: block;
+    position: relative;
+    float: left;
+    height: 338px;
+    width: 280px;
+    margin-right: 40px;
+    margin-top: 25px;
+    background: #fff;
+    display: block;
+    animation-name: fadeIn;
+    animation-duration: 5s;
+    animation-iteration-count: 1;
+    animation-delay: 0.8s;
 }
-.content .content-container .goods-block .goods-container .goods-group .detail-rs-item:hover {
-  box-shadow: 10px 20px 30px rgba(0, 0, 0, 0.2);
+
+.content .content-container .goods-block .goods-container .detail-rs-item:hover {
+    box-shadow: 10px 20px 30px rgba(0, 0, 0, 0.2);
 }
-.content .content-container .goods-block .goods-container .goods-group .detail-rs-item-wrap {
-  display: block;
-  padding: 30px 10px 5px;
-  text-align: center;
+
+.content .content-container .goods-block .goods-container .detail-rs-item-wrap {
+    display: block;
+    padding: 30px 10px 5px;
+    text-align: center;
 }
-.content .content-container .goods-block .goods-container .goods-group .detail-rs-item-wrap .mod-pic img {
-  width: 200px;
-  height: 245px;
+
+.content .content-container .goods-block .goods-container .detail-rs-item-wrap .mod-pic img {
+    width: 200px;
+    height: 245px;
 }
-.content .content-container .goods-block .goods-container .goods-group .detail-rs-item-wrap .mod-desc {
-  display: none;
+
+.content .content-container .goods-block .goods-container .detail-rs-item-wrap .mod-desc {
+    display: none;
 }
-.content .content-container .goods-block .goods-container .goods-group .detail-rs-item-wrap .mod-desc .vm-title {
-  font-size: 14px;
-  color: #333;
+
+.content .content-container .goods-block .goods-container .detail-rs-item-wrap .mod-desc .vm-title {
+    font-size: 14px;
+    color: #333;
 }
-.content .content-container .goods-block .goods-container .goods-group .detail-rs-item-wrap .mod-desc .vm-subtitle {
-  font-size: 12px;
-  color: #999;
-  margin-top: 2px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+
+.content .content-container .goods-block .goods-container .detail-rs-item-wrap .mod-desc .vm-subtitle {
+    font-size: 12px;
+    color: #999;
+    margin-top: 2px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
-.content .content-container .goods-block .goods-container .goods-group .detail-rs-item-wrap .mod-desc .vm-price {
-  margin-top: 8px;
-  font-size: 12px;
-  color: #e02b41;
+
+.content .content-container .goods-block .goods-container .detail-rs-item-wrap .mod-desc .vm-price {
+    margin-top: 8px;
+    font-size: 12px;
+    color: #e02b41;
 }
-.content .content-container .goods-block .goods-container .goods-group .detail-rs-item-wrap .mod-desc .vm-price-text {
-  color: #e02b41;
-  padding-right: 2px;
-  font-size: 16px;
+
+.content .content-container .goods-block .goods-container .detail-rs-item-wrap .mod-desc .vm-price-text {
+    color: #e02b41;
+    padding-right: 2px;
+    font-size: 16px;
 }
-.content .content-container .goods-block .goods-container .goods-group .detail-rs-item-wrap .mod-desc s {
-  color: #999;
+
+.content .content-container .goods-block .goods-container .detail-rs-item-wrap .mod-desc s {
+    color: #999;
 }
-.content .content-container .goods-block .goods-container .goods-group .detail-rs-item-wrap .mod-desc .vm-link {
-  color: #FFFFFF;
-  background: #E02B41;
-  width: 100px;
-  height: 30px;
-  line-height: 30px;
-  /* text-align: center; */
-  margin-left: 73px;
-  margin-top: 5px;
+
+.content .content-container .goods-block .goods-container .detail-rs-item-wrap .mod-desc .vm-link {
+    color: #FFFFFF;
+    background: #E02B41;
+    width: 100px;
+    height: 30px;
+    line-height: 30px;
+    /* text-align: center; */
+    margin-left: 73px;
+    margin-top: 5px;
 }
 
 #topbar {
-  display: none;
-  position: fixed;
-  bottom: 60px;
-  right: 0;
-  background: rgba(0, 0, 0, 0.2);
-  width: 50px;
-  height: 50px;
+    display: none;
+    position: fixed;
+    bottom: 60px;
+    right: 0;
+    background: rgba(0, 0, 0, 0.2);
+    width: 50px;
+    height: 50px;
 }
+
 #topbar a {
-  color: #fff;
-  font-size: 32px;
-  position: absolute;
-  left: 10px;
+    color: #fff;
+    font-size: 32px;
+    position: absolute;
+    left: 10px;
 }
+
 #topbar .top-tip {
-  color: #fff;
-  position: absolute;
-  bottom: 0;
-  left: 10px;
-  font-size: initial;
+    color: #fff;
+    position: absolute;
+    bottom: 0;
+    left: 10px;
+    font-size: initial;
 }
 
 #topbar:hover {
-  background: #E02B41;
+    background: #E02B41;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
